Add policy.service.ts for API requests

--- a/src/app/form-policy/form-policy.component.html
+++ b/src/app/form-policy/form-policy.component.html
@@ -1,4 +1,4 @@
-<h2 class="title">Compra tu póliza</h2>
+<!-- <h2 class="title">Compra tu póliza</h2> -->
 
 <div class="example-container">
   <mat-form-field>
@@ -22,7 +22,7 @@
   </mat-form-field>
 
   <mat-form-field>
-    <input [(ngModel)]="policyType.value" matInput placeholder="Valor de póliza">
+    <input matInput placeholder="Valor de póliza" [value]="policyType.value">
   </mat-form-field>
 
 </div>
