Add button to save data

--- a/src/app/form-policy/form-policy.component.html
+++ b/src/app/form-policy/form-policy.component.html
@@ -22,7 +22,9 @@
   </mat-form-field>
 
   <mat-form-field>
-    <input matInput placeholder="Valor de póliza" [value]="policyType ? policyType.value : ''">
+    <input matInput placeholder="Valor de póliza" [value]="policyType ? policyType.value : ''" [disabled]="true">
   </mat-form-field>
+
+  <button mat-raised-button color="primary" (click)="onSaveData()">guardar</button>
 
 </div>
