Save data on MongoDB

--- a/src/app/form-policy/form-policy.component.html
+++ b/src/app/form-policy/form-policy.component.html
@@ -10,7 +10,7 @@
   </mat-form-field>
 
   <mat-form-field>
-    <input [(ngModel)]="insurancePolicy.lasttName" matInput placeholder="Apellido">
+    <input [(ngModel)]="insurancePolicy.lastName" matInput placeholder="Apellido">
   </mat-form-field>
 
   <mat-form-field>
